--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header class="header-section">
         <div class="first-section">
             <div class="first-sec-child-1">
-                <h1>The Greatest show on the earth</h1>
+                <h1 data-text="The Greatest Show On The Earth.">The Greatest Show On The Earth.</h1>
                 <p>The greatest show on the earth is going to began . For regular updates stay with us .Hera you can see
                     all the contents of Qatar World Cup 2022.</p>
                 <div class="go-live-btn">
@@ -41,7 +41,7 @@
     <section class="section-two">
         <div class="section-two-flex">
             <div class="side-bar">
-                <button class="side-bar-btn upcomming-match">Upcoming Match</button>
+                <button class="side-bar-btn upcomming-match"><a href="http://127.0.0.1:5500/match-schedule.html" target="_blank">Upcoming Match</a></button>
                 <button class="side-bar-btn all-groups">All Groups</button>
                 <button class="side-bar-btn blog">Blog</button>
             </div>
