--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section class="section-two">
         <div class="section-two-flex">
             <div class="side-bar">
-                <button class="side-bar-btn upcomming-match"><a href="http://127.0.0.1:5500/match-schedule.html" target="_blank">Upcoming Match</a></button>
+                <button class="side-bar-btn upcomming-match"><a href="http://127.0.0.1:5500/match-schedule.html">Upcoming Match</a></button>
                 <button class="side-bar-btn all-groups">All Groups</button>
                 <button class="side-bar-btn blog">Blog</button>
             </div>
