--- a/match-schedule.html
+++ b/match-schedule.html
@@ -43,7 +43,7 @@
             <div class="side-bar">
                 <button class="side-bar-btn upcomming-match">Upcoming Match</button>
                 <button class="side-bar-btn all-groups">All Groups</button>
-                <button class="side-bar-btn blog"><a href="http://127.0.0.1:5500/index.html">Blog</a></button>
+                <button class="side-bar-btn blog"><a href="http://127.0.0.1:5500/index.html"></a>Blog</button>
             </div>
             <article class="grid">
                 <div class="match-grid-layout">
