--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         Header Section
     ------------------  -->
     <header class="header-section">
-        <div class="first-section">
+        <div class="first-section headder-animation">
             <div class="first-sec-child-1">
                 <h1 data-text="The Greatest Show On The Earth.">The Greatest Show On The Earth.</h1>
                 <p>The greatest show on the earth is going to began . For regular updates stay with us .Hera you can see
@@ -41,10 +41,16 @@
     <section class="section-two">
         <div class="section-two-flex">
             <div class="side-bar">
-                <a href="http://127.0.0.1:5500/match-schedule.html" target="_parent"><button class="side-bar-btn upcomming-match">Upcoming Match</button></a>
-                <a href="#" target="_parent"><button class="side-bar-btn all-groups">All Groups</button></a>
-                <a href="#" target="_parent"><button class="side-bar-btn blog">Blog</button></a>
+                <button class="side-bar-btn upcomming-match"><a
+                        href="http://127.0.0.1:5500/match-schedule.html">Upcoming Match</a></button>
+                <button class="side-bar-btn all-groups"><a href="http://127.0.0.1:5500/match-schedule.html">All
+                        Groups</a></button>
+                <button class="side-bar-btn blog"><a href="http://127.0.0.1:5500/index.html">Blog</a></button>
             </div>
+
+            <!--------------------- 
+                Section Two Article
+            -----------------------  -->
             <article class="grid">
                 <div class="match-grid-layout">
                     <div class="match">
@@ -116,6 +122,10 @@
                 </div>
             </article>
         </div>
+
+        <!------------------------------------------ 
+            Magical View Only Visible In Talbet Mode
+        -------------------------------------------- -->
         <div class="view-all-magic-btn">
             <button class="view-all-button">View All</button>
         </div>
@@ -124,25 +134,36 @@
     <!---------------- 
         Footer Section
     ------------------  -->
-    
+
     <footer>
         <div class="footer-section">
             <h1>Goal</h1>
-        <hr>
-        <div class="links">
-            <a href="#">Contact Us</a>
-            <a href="#">Terms of Service</a>
-            <a href="#">Privacy Policy</a>
-            <a href="#">Privacy Settings</a>
-            <a href="#">Goal App</a>
-            <a href="#">Goal Live</a>
+            <hr>
+
+        <!-- --------------
+            Footer Menu Bar
+        ------------------- -->
+
+            <div class="links">
+                <a href="#">Contact Us</a>
+                <a href="#">Terms of Service</a>
+                <a href="#">Privacy Policy</a>
+                <a href="#">Privacy Settings</a>
+                <a href="#">Goal App</a>
+                <a href="#">Goal Live</a>
+            </div>
         </div>
-        </div>
+
+        <!------------------------------- 
+            Social Media Links With Icons
+        ---------------------------------  -->
+
         <div class="footer-social-icons">
             <ul>
                 <li><a href="https://twitter.com/" target=”_blank”><i class="fa-brands fa-twitter"></i></a></li>
                 <li><a href="https://www.instagram.com/" target=”_blank”><i class="fa-brands fa-instagram"></i></a></li>
-                <li><a href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                <li><a href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                </li>
             </ul>
         </div>
 
