--- a/match-schedule.html
+++ b/match-schedule.html
@@ -41,10 +41,17 @@
     <section class="section-two">
         <div class="section-two-flex">
             <div class="side-bar">
-                <button class="side-bar-btn upcomming-match">Upcoming Match</button>
-                <button class="side-bar-btn all-groups">All Groups</button>
-                <button class="side-bar-btn blog"><a href="http://127.0.0.1:5500/index.html"></a>Blog</button>
+                <button class="side-bar-btn upcomming-match"><a
+                        href="http://127.0.0.1:5500/match-schedule.html">Upcoming Match</a></button>
+                <button class="side-bar-btn all-groups"><a href="http://127.0.0.1:5500/match-schedule.html">All
+                        Groups</a></button>
+                <button class="side-bar-btn blog"><a href="http://127.0.0.1:5500/index.html">Blog</a></button>
             </div>
+
+            <!--------------------- 
+                Section Two Articla
+            -----------------------  -->
+
             <article class="grid">
                 <div class="match-grid-layout">
                     <div class="match">
@@ -104,6 +111,11 @@
                 </div>
             </article>
         </div>
+
+        <!-------------------------------------------- 
+            Magical Button Only Visible On Tablet Mode
+        ----------------------------------------------  -->
+
         <div class="view-all-magic-btn">
             <button class="view-all-button">View All</button>
         </div>
@@ -112,25 +124,36 @@
     <!---------------- 
         Footer Section
     ------------------  -->
-    
+
     <footer>
         <div class="footer-section">
             <h1>Goal</h1>
-        <hr>
-        <div class="links">
-            <a href="#">Contact Us</a>
-            <a href="#">Terms of Service</a>
-            <a href="#">Privacy Policy</a>
-            <a href="#">Privacy Settings</a>
-            <a href="#">Goal App</a>
-            <a href="#">Goal Live</a>
+            <hr>
+
+            <!------------------------- 
+                Footer Section Menu Bar
+            --------------------------- -->
+
+            <div class="links">
+                <a href="#">Contact Us</a>
+                <a href="#">Terms of Service</a>
+                <a href="#">Privacy Policy</a>
+                <a href="#">Privacy Settings</a>
+                <a href="#">Goal App</a>
+                <a href="#">Goal Live</a>
+            </div>
         </div>
-        </div>
+
+        <!------------------------------- 
+            Social Media Links With Icons
+        ---------------------------------  -->
+
         <div class="footer-social-icons">
             <ul>
                 <li><a href="https://twitter.com/" target=”_blank”><i class="fa-brands fa-twitter"></i></a></li>
                 <li><a href="https://www.instagram.com/" target=”_blank”><i class="fa-brands fa-instagram"></i></a></li>
-                <li><a href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                <li><a href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                </li>
             </ul>
         </div>
 
